fix: descrese button size on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,9 @@
 
   --breakpoint-xb: 768px;
 }
+body {
+  font-size: 16px;
+}
 
 .no-scrollbar::-webkit-scrollbar {
   display: none;
